# Pathfinder

./: .gitignore  .gitmodules  CMakeLists.txt
.claude/: launch.json
FIR 538-24/: 1. Bail ASJ  Anticipatory Mandeep.docx  12. CJM Bail Reply Bharat Lande  19.07.25.docx  Bail reply Sameer.docx  Bail reply of Bishnu Srestha.docx  Court matter Bail Bond.docx  IR OF SAMEER.docx  IR role Md Irfan.docx  Money release of Bishnu.docx  New Microsoft Word Document (2).docx  Sameer chat.docx  Statement of Md Irfan.docx  bail reply of Sameer.docx  case Detail 538-24.docx
FIR 538-24/18. FIR No. 538-24 Sh. Arun jain/: 2 Ack No. 30811240054149 (1).xlsx  2nd Charge Sheet 538-24 dated.docx  Brief Facts.docx  Misc. Information.docx  Notice 35.3 BNSS.docx  Presentation.docx  Press Release.docx  Seixured item list.docx  i.docx
FIR 538-24/18. FIR No. 538-24 Sh. Arun jain/0. Vishnu/: Gurdeep Singh Bhart Vital Lande.docx  Vishnu.docx  inrerrogation of Bharat Vitale Lande.docx
FIR 538-24/18. FIR No. 538-24 Sh. Arun jain/1. De Freezing of accounts/: Note Sheet.docx  Sample Reply for defreeze.docx
FIR 538-24/18. FIR No. 538-24 Sh. Arun jain/Account Wise data/: Intimation to all complaints.docx  Print Out of Prince.docx
FIR 538-24/18. FIR No. 538-24 Sh. Arun jain/Accused Related/: DD Entry Arrest.docx  Disclosure Statement.docx  Disclosure interoogation of mandeep.docx  Ground of Arrest.docx  Interrogation Ankit.docx  Interrogation of Anuj.docx  Interrogation of Mahesh Kumar Jat.docx  Interrogation of Mandeep Singh.docx  Interrogation of Mintu.docx  Interrogation of Padam Chand Chordia.docx  Interrogation of Saurabh.docx  New Bank acounts disclosed by accused oersons.docx  bail Bond Verification.docx
FIR 538-24/18. FIR No. 538-24 Sh. Arun jain/Amount Layer -1/: Amount Freezed.docx  Detail of 26 Bank accounts.docx  Layer 01 bank wise details (1).docx  Layer 1 details.docx  ~$tail of 26 Bank accounts.docx
FIR 538-24/18. FIR No. 538-24 Sh. Arun jain/Case Diary/: CD No.100 dated 30.06.25.docx  CD No.101 dated 01.07.25 (SI Vishv).docx  CD No.102 dated 02.07.25.docx  CD No.104 dated 04.07.25.docx  CD No.106 dated 06.07.25 ( Insp Naresh malik).docx  (+6 more)
agent/: requirements.txt  verify_workflows.py
agent/config/: pathfinder.json  workflow_blueprint.md  workflows.json
agent/pathfinder_agent/: __init__.py  __main__.py  agent_loop.py  analyzer.py  config.py  extraction.py  ipc.py  llm.py  mcp_client.py  memory.py  models.py  panels.py  pipeline.py  workflow.py  workflow_author.py  workflow_schema.py
agent/sample_data/: README.md  run_deterministic_workflows.py
backend-old/: agent.py  analyzer.py  check_imports.py  check_splitter.py  main.py  prompts.py  rag.py  requirements.txt  test_agent.py  tools.py
backend-old/chroma_db/: chroma.sqlite3
config/: pathfinder.json  workflows.json
docs/: UI_SPEC.md  UNTESTED_RISKS.md
hud/src-tauri/: Cargo.toml  tauri.conf.json
hud/ui/: __preview.html  index.html  main.js  style.css
include/agent/: AgentLoop.h  PanelDataStore.h
include/config/: Config.h
include/core/: App.h
include/hud/: HudWindow.h
include/llm/: ILlmAdapter.h  OllamaAdapter.h
include/mcp/: FilesystemMcp.h  McpClient.h
include/memory/: AgentMemory.h  CaseFact.h
include/pipeline/: CaseExtractor.h  DocumentPipeline.h
include/workflow/: WorkflowEngine.h
resources/: pathfinder.rc
src/agent/: AgentLoop.cpp  PanelDataStore.cpp
src/config/: Config.cpp
src/core/: App.cpp  main.cpp
src/llm/: OllamaAdapter.cpp
src/mcp/: FilesystemMcp.cpp  McpClient.cpp
src/memory/: AgentMemory.cpp
src/pipeline/: CaseExtractor.cpp  DocumentPipeline.cpp
src/workflow/: WorkflowEngine.cpp
(+385 files in other folders)
